# waveseekers-server

./: Cargo.toml  README.md
config/: base.yaml  local.yaml
data/: datafeed.json  symbols.csv
src/: application.rs  configuration.rs  lib.rs  main.rs
src/datafeed/: bar_generator.rs  historical.rs  mod.rs
src/domain/: bar.rs  indicators.rs  interval.rs  mod.rs  resolution.rs  series.rs  symbol_info.rs  symbol_type.rs  tick.rs
src/indicators/: adapative_moving_average.rs  mod.rs  simple_moving_average.rs  tri_average.rs  xaverage.rs
src/routes/: mod.rs
src/routes/data/: datafeed.rs  historical.rs  mod.rs
src/routes/health/: heartbeat.rs
src/routes/symbols/: mod.rs  resolve.rs  search.rs
src/storage/: database.rs  mod.rs
tests/: generate_bars_test.rs  heartbeat_test.rs
tests/common/: mod.rs
