[package]
name = "waveseekers"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "waveseekers"

[dependencies]
actix-web = "4"
anyhow = "1"
assert_float_eq = "1.1"
chrono = "0.4"
config = { version = "0.15", default-features = false, features = ["yaml"] }
csv = "1.3"
env_logger = "0.11.8"
log = "0.4"
questdb-rs = { version = "5", features = ["chrono_timestamp"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
serde_with = "3.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-actix-web = "0.7"
url = "2"
